@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-10853.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-10854.tgz',
      'xapian-core.tgz',
-     '2d2a2e7bb9b8b8a656440e70977e8ab9c5dc2f50',
+     'cc14120800cba1d483264df97aef4075fb801211',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-10853.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-10854.tgz',
      'xapian-bindings.tgz',
-     'cc56f94c19ccdbfa3af672741d57bbbba54112ad',
+     'cba5fc4a08a0a044951ccc9c50357b433c984dc9',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-10853.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-10854.tgz',
      'win32msvc.tgz',
-     '9516e462c8e8dd6fe768925a3590615c804d68e3',
+     'c4ab63ff63e458ee896faf6f1ce88edf9c4c0b44',
      'xapian-core/win32',
     ),
 )
