@@ -1,3 +1,8 @@
+Wed Jul 09 14:49:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: And another upload, this time to fix
+	  autoreconf.
+
 Wed Jul 09 14:14:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: And another set of updated packages!
